--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landing Page</title>
     <link rel="stylesheet" href="main.css">
+<script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body>
      <!----First section---->
